<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainRelativeLayoutStyle">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_appBarLayout"
        style="@style/AppBarLayoutStyle">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:subtitleTextColor="@color/white"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_below="@id/my_appBarLayout"
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/LEDImage"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:src="@drawable/offled">

        </de.hdodenhof.circleimageview.CircleImageView>

        <RelativeLayout
            style="@style/RelativeLayoutStyle_WrapContent">

            <LinearLayout
                android:layout_marginTop="15dp"
                android:id="@+id/L1"
                style="@style/LinearLayoutStyle_WrapContent_Horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/LED1"
                    style="@style/SubHeadingStyle"
                    android:text="@string/led"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/L2"
                android:layout_below="@id/L1"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/OnLED"
                    android:layout_margin="5dp"
                    android:layout_width="50dp"
                    style="@style/TextStyleGrey"
                    android:padding="8dp"
                    android:text="@string/on"
                    android:gravity="center"
                    android:background="@color/green"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/OffLED"
                    android:padding="8dp"
                    android:layout_width="50dp"
                    android:layout_margin="5dp"
                    style="@style/TextStyleGrey"
                    android:gravity="center"
                    android:text="@string/off"
                    android:background="@color/red"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/L2"
                style="@style/LinearLayoutStyle_WrapContent_Horizontal">
                <TextView
                    style="@style/TextStyleGrey"
                    android:text="Arduino Message"
                    android:padding="16dp"
                    android:id="@+id/textViewInfo"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>